# a3b3

./: README  a2b2.cabal  a3b3.cabal  plot.gp
src/: ABRatVsCDRat.hs  Main.hs  RatVRat.hs  a3b3.c
